main.css
ul.topNav {
    list-style-type: none;
    overflow: hidden;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 10pt;
    color: rgb(77,77,77);
    padding-right: 10px;
    padding-left:15px;

}

ul.footNav {
    list-style-type: none;
    overflow: hidden;
    font-family: sans-serif;
    font-size: 9pt;
    color: rgb(77,77,77);
    padding-right: 25px;
    padding-left:25px;
}

li.leftSide:hover {
    text-decoration: underline;
}

li.rightSide:hover {
    text-decoration: underline;
}

li.leftSide {
    float: left;
    padding-right: 25px;
    padding-top: 10px;
}

li.rightSide {
    float: right;
    padding-left: 25px;
    padding-top: 10px;
}

#signInbutton {
    background-color: rgb(67, 117, 255);
    border-radius: 3px;
    padding: 10px 15px 10px 15px;
    margin-left: 10px;
    color: white;

}

footer {
    background-color: rgb(241,241,241);
    border: 1px solid rgb(224, 224, 224);
    height: 30px;
    position: fixed;
    left: 0;
    bottom: 0;
    padding-bottom: 10px;
    width: 100%;
    color: rgb(224, 224, 224);
}

img.glogo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 160px;
}

div.mainsection {
    display: block;
    text-align: center;
}

input[type=text] {
    width: 45%;
    height: 40px;
    padding: 2px 2px 2px 2px;
    background-image: url(search-icon.png);
    background-position: 4% 50%;
    background-repeat: no-repeat;
    padding-left: 40px;
    padding-top: 2px;
    padding-bottom: 2px;
    background-size: 14px 14px;
    resize: none;
    border-radius: 30px;
    border: 1px solid rgba(192, 192, 192, 0.5);
    margin: 30px;
}

input[type=text]:hover {
    box-shadow: 0px 1px 5px rgba(192, 192, 192);
    border: 0px;
}

input[type=submit] {
    color: rgb(100, 100, 100);
    font-size: 11pt;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 5px;
    background-color: rgb(241, 241, 241);
    border: 0px;
    padding: 5px 20px;
    width: auto;
    height: 35px;
    margin: 5px;
}

